# tello_control

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: controller.launch
src/: joystick_and_video.py  my_test.py
